Chevron and White Space Fixes
Single colour for expand/collapse chevrons, fixing globs of white space
issues, consistent application of border radius.

--- a/sears-partsdirect-vault/src/main/content/jcr_root/etc/designs/searspartsdirect/clientlib_base/less/components/commonParts/commonParts.less
+++ b/sears-partsdirect-vault/src/main/content/jcr_root/etc/designs/searspartsdirect/clientlib_base/less/components/commonParts/commonParts.less
@@ -24,7 +24,7 @@
 						display: inline-block;
 						line-height: 40px;
 					}
-					[class*="icon-"], [class^=" icon-"] {
+					i {
 						color: @primaryHueNormal;
 						display: inline-block;
 						float: right;
@@ -35,7 +35,6 @@
 						display: none;
 					}
 					.icon-chevron-up {
-						color: @secondaryHueDark;
 						display: inline-block;
 					}
 					&.collapsed {
